# bib-unifier

./: .gitignore  Cargo.toml  LICENSE  README.md
bib_files/: incorrect.bib
bib_files/no_bib_files/: some_file.txt
bib_files/test_files/: [bib_unifier]bibliography.bib  all_same_fields.bib  only_same_doi.bib  only_same_key.bib  only_same_title.bib  rep_in_file.bib  similar_title.bib  test.bib  test2.bib
bib_files/usecase_files/: pau1.bib  pau4.bib  pau5.bib
src/: lib.rs  main.rs  parsing.rs  unify.rs
test_files/: pau2.bib  pau3.bib  test1.bib  test2.bib
